# fuzzy-dynamo

./: .gitignore  WORKFLOW.md  report.tex  setup.sh
fixes/: 001-block-hash-zero-block-size.patch.rs  002-concurrent-radix-tree-deadlock.patch.rs  003-glm47-utf8-boundary-panic.patch.rs  004-positional-indexer-jump-skip.patch.rs  005-stored-blocks-oob-panic.patch.rs  006-pythonic-prefix-leak.patch.rs  007-dsml-parameter-silently-dropped.patch.rs  008-granite-streaming-prefix-buffering.patch.rs  009-kimi-k2-oncelock-regex-caching.patch.rs  010-minimax-streaming-trailing-newline.patch.rs  011-to-block-level-div-by-zero.patch.rs  012-worker-selector-zero-block-size.patch.rs  013-xml-strip-quotes-panic.patch.rs  (+2 more)
lib/kv-router/fuzz/: Cargo.toml  kv_router.dict
lib/kv-router/fuzz/artifacts/fuzz_request_extra_info/: crash-0cc8a1cc896ff94ec03af52f14c14be935affafe
lib/kv-router/fuzz/coverage/fuzz_block_hash_computation/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_concurrent_stress/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_differential_indexers/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_kv_protocol_json/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_positional_indexer/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_radix_tree_consistency/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_radix_tree_events/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_request_extra_info/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_triple_differential/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_worker_selector/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_worker_selector_div/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_zmq_e2e/: coverage.profdata
lib/kv-router/fuzz/coverage/fuzz_zmq_wire/: coverage.profdata
lib/kv-router/fuzz/fuzz_targets/: fuzz_block_hash_computation.rs  fuzz_concurrent_stress.rs  fuzz_differential_indexers.rs  fuzz_kv_protocol_json.rs  fuzz_positional_indexer.rs  fuzz_radix_tree_consistency.rs  fuzz_radix_tree_events.rs  fuzz_request_extra_info.rs  fuzz_stored_blocks.rs  fuzz_triple_differential.rs  fuzz_worker_selector.rs  fuzz_worker_selector_div.rs  fuzz_zmq_e2e.rs  fuzz_zmq_wire.rs  fuzz_zmq_wire_convert.rs  fuzz_zmq_wire_decode.rs  fuzz_zmq_wire_extra_keys.rs  fuzz_zmq_wire_roundtrip.rs
lib/kv-router/fuzz/seeds/: clear_event.json  kv_cache_events.json  remove_event.json  router_request_new.json  router_request_prefill.json  store_event.json
lib/kv-router/fuzz/src/: lib.rs
lib/llm/fuzz/: Cargo.toml  sse.dict
lib/llm/fuzz/fuzz_targets/: fuzz_sse_decode.rs  fuzz_sse_decode_data.rs  fuzz_sse_streaming.rs
lib/llm/fuzz/seeds/sse/: all_fields.txt  comment_only.txt  consecutive_blanks.txt  crlf_endings.txt  done_sentinel.txt  empty_fields.txt  error_event.txt  mixed_events.txt  multi_data.txt  no_terminator.txt  null_id.txt  real_nvidia.txt  retry_field.txt  simple_data.txt  unknown_field.txt
lib/llm/fuzz/src/: codec.rs  lib.rs
lib/parsers/fuzz/: Cargo.toml  parser_tokens.dict  parsers.dict
lib/parsers/fuzz/coverage/fuzz_deepseek_variants/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_detect_start/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_differential/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_end_positions/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_glm47_utf8/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_named_configs/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_nested_and_large/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_parser_properties/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_parser_semantic/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_parser_stress/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_reasoning_oneshot/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_reasoning_streaming/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_tool_call_parsers/: coverage.profdata
lib/parsers/fuzz/coverage/fuzz_with_tools/: coverage.profdata
lib/parsers/fuzz/fuzz_targets/: fuzz_content_preservation.rs  fuzz_deepseek_parsers.rs  fuzz_deepseek_variants.rs  fuzz_detect_start.rs  fuzz_differential.rs  fuzz_end_positions.rs  fuzz_glm47_utf8.rs  fuzz_invariants.rs  fuzz_named_configs.rs  fuzz_nested_and_large.rs  fuzz_parser_configs.rs  fuzz_parser_crash_oracle.rs  fuzz_parser_properties.rs  fuzz_parser_semantic.rs  fuzz_parser_stress.rs  fuzz_reasoning_oneshot.rs  fuzz_reasoning_parsers.rs  fuzz_reasoning_streaming.rs  fuzz_redos.rs  fuzz_streaming_monotonicity.rs  fuzz_streaming_reasoning.rs  fuzz_structured_configs.rs  fuzz_tool_call_parsers.rs  fuzz_tool_call_roundtrip.rs  fuzz_with_tools.rs  fuzz_xml_deep.rs
lib/parsers/fuzz/seeds/: deepseek_v3.txt  dsml.txt  dsml_missing_string_attr.txt  dsml_true_capital.txt  glm47.txt  glm47_trim_mismatch.txt  hermes.txt  kimi_k2.txt  kimi_k2_empty_section.txt  minimax.txt  nested_json.txt  pythonic.txt  pythonic_redos.txt  pythonic_text_after.txt  reasoning_deepseek.txt  reasoning_qwen.txt  strip_quotes_edge.txt  xml_entities.txt  xml_truenorth.txt
lib/parsers/fuzz/src/: lib.rs
lib/runtime/fuzz/: Cargo.toml  codec.dict  msgpack.dict
lib/runtime/fuzz/artifacts/fuzz_two_part_decode/: crash-1bd347611b550cf294eac849f2b7e9c1a21797f3
lib/runtime/fuzz/fuzz_targets/: fuzz_codec_crash_oracle.rs  fuzz_envelope_decode.rs  fuzz_envelope_roundtrip.rs  fuzz_frame_decode.rs  fuzz_frame_to_envelope.rs  fuzz_network_codecs.rs  fuzz_slug.rs  fuzz_tcp_decode.rs  fuzz_two_part_decode.rs  fuzz_two_part_roundtrip.rs
lib/tokens/fuzz/: Cargo.toml  tokens.dict
lib/tokens/fuzz/coverage/fuzz_positional_hash/: coverage.profdata
lib/tokens/fuzz/coverage/fuzz_positional_hash/raw/: default-fuzz_positional_hash.profraw
lib/tokens/fuzz/coverage/fuzz_token_block_sequence/: coverage.profdata
lib/tokens/fuzz/coverage/fuzz_token_block_sequence/raw/: default-fuzz_token_block_sequence.profraw
lib/tokens/fuzz/fuzz_targets/: fuzz_lineage_hash.rs  fuzz_positional_hash.rs  fuzz_positional_lineage_hash.rs  fuzz_positional_sequence_hash.rs  fuzz_token_block_sequence.rs
(+124 files in other folders)
