[package]
name = "dynamo-llm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[lib]
name = "dynamo_llm_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_sse_decode"
path = "fuzz_targets/fuzz_sse_decode.rs"
doc = false

[[bin]]
name = "fuzz_sse_streaming"
path = "fuzz_targets/fuzz_sse_streaming.rs"
doc = false

[[bin]]
name = "fuzz_sse_decode_data"
path = "fuzz_targets/fuzz_sse_decode_data.rs"
doc = false
