[package]
name = "dynamo-parsers-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.dynamo-parsers]
path = ".."

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_tool_call_parsers"
path = "fuzz_targets/fuzz_tool_call_parsers.rs"
doc = false

[[bin]]
name = "fuzz_parser_configs"
path = "fuzz_targets/fuzz_parser_configs.rs"
doc = false

[[bin]]
name = "fuzz_reasoning_parsers"
path = "fuzz_targets/fuzz_reasoning_parsers.rs"
doc = false

[[bin]]
name = "fuzz_streaming_reasoning"
path = "fuzz_targets/fuzz_streaming_reasoning.rs"
doc = false

[[bin]]
name = "fuzz_detect_start"
path = "fuzz_targets/fuzz_detect_start.rs"
doc = false

[[bin]]
name = "fuzz_end_positions"
path = "fuzz_targets/fuzz_end_positions.rs"
doc = false

[[bin]]
name = "fuzz_deepseek_parsers"
path = "fuzz_targets/fuzz_deepseek_parsers.rs"
doc = false

[[bin]]
name = "fuzz_structured_configs"
path = "fuzz_targets/fuzz_structured_configs.rs"
doc = false

[[bin]]
name = "fuzz_nested_and_large"
path = "fuzz_targets/fuzz_nested_and_large.rs"
doc = false

[[bin]]
name = "fuzz_invariants"
path = "fuzz_targets/fuzz_invariants.rs"
doc = false

[[bin]]
name = "fuzz_differential"
path = "fuzz_targets/fuzz_differential.rs"
doc = false

[[bin]]
name = "fuzz_redos"
path = "fuzz_targets/fuzz_redos.rs"
doc = false

[[bin]]
name = "fuzz_with_tools"
path = "fuzz_targets/fuzz_with_tools.rs"
doc = false
