[package]
name = "dynamo-parsers-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[lib]
name = "dynamo_parsers_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.dynamo-parsers]
path = ".."

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_parser_crash_oracle"
path = "fuzz_targets/fuzz_parser_crash_oracle.rs"
doc = false

[[bin]]
name = "fuzz_parser_properties"
path = "fuzz_targets/fuzz_parser_properties.rs"
doc = false

[[bin]]
name = "fuzz_parser_semantic"
path = "fuzz_targets/fuzz_parser_semantic.rs"
doc = false

[[bin]]
name = "fuzz_differential"
path = "fuzz_targets/fuzz_differential.rs"
doc = false

[[bin]]
name = "fuzz_parser_stress"
path = "fuzz_targets/fuzz_parser_stress.rs"
doc = false

[[bin]]
name = "fuzz_nested_and_large"
path = "fuzz_targets/fuzz_nested_and_large.rs"
doc = false

[[bin]]
name = "fuzz_with_tools"
path = "fuzz_targets/fuzz_with_tools.rs"
doc = false
