[package]
name = "dynamo-parsers-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[lib]
name = "dynamo_parsers_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.dynamo-parsers]
path = ".."

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_tool_call_parsers"
path = "fuzz_targets/fuzz_tool_call_parsers.rs"
doc = false

[[bin]]
name = "fuzz_named_configs"
path = "fuzz_targets/fuzz_named_configs.rs"
doc = false

[[bin]]
name = "fuzz_detect_start"
path = "fuzz_targets/fuzz_detect_start.rs"
doc = false

[[bin]]
name = "fuzz_end_positions"
path = "fuzz_targets/fuzz_end_positions.rs"
doc = false

[[bin]]
name = "fuzz_deepseek_variants"
path = "fuzz_targets/fuzz_deepseek_variants.rs"
doc = false

[[bin]]
name = "fuzz_reasoning_oneshot"
path = "fuzz_targets/fuzz_reasoning_oneshot.rs"
doc = false

[[bin]]
name = "fuzz_reasoning_streaming"
path = "fuzz_targets/fuzz_reasoning_streaming.rs"
doc = false

[[bin]]
name = "fuzz_parser_properties"
path = "fuzz_targets/fuzz_parser_properties.rs"
doc = false

[[bin]]
name = "fuzz_parser_semantic"
path = "fuzz_targets/fuzz_parser_semantic.rs"
doc = false

[[bin]]
name = "fuzz_differential"
path = "fuzz_targets/fuzz_differential.rs"
doc = false

[[bin]]
name = "fuzz_parser_stress"
path = "fuzz_targets/fuzz_parser_stress.rs"
doc = false

[[bin]]
name = "fuzz_nested_and_large"
path = "fuzz_targets/fuzz_nested_and_large.rs"
doc = false

[[bin]]
name = "fuzz_with_tools"
path = "fuzz_targets/fuzz_with_tools.rs"
doc = false
