[package]
name = "dynamo-runtime-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
tokio = { version = "1", features = ["rt", "io-util"] }

[dependencies.dynamo-runtime]
path = ".."

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_codec_crash_oracle"
path = "fuzz_targets/fuzz_codec_crash_oracle.rs"
doc = false

[[bin]]
name = "fuzz_two_part_roundtrip"
path = "fuzz_targets/fuzz_two_part_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_slug"
path = "fuzz_targets/fuzz_slug.rs"
doc = false
