[package]
name = "dynamo-tokens-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.dynamo-tokens]
path = ".."

# Prevent cargo-fuzz from being pulled into the workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_positional_hash"
path = "fuzz_targets/fuzz_positional_hash.rs"
doc = false

[[bin]]
name = "fuzz_token_block_sequence"
path = "fuzz_targets/fuzz_token_block_sequence.rs"
doc = false

[[bin]]
name = "fuzz_lineage_hash"
path = "fuzz_targets/fuzz_lineage_hash.rs"
doc = false
